Ui fixes & broken links,Map fixed & form submits

--- a/3D-designs.html
+++ b/3D-designs.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Tatee Theme Templates">
+    <meta name="description" content="Lasvegas concord">
     <meta name="author" content="AuCreative">
-    <meta name="keywords" content="Tatee Theme Templates">
+    <meta name="keywords" content="Lasvegas concord">
 
     <!-- Title Page-->
     <title>3D Designs | Las Vegas</title>
@@ -50,8 +50,8 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
-                                        <img src="images/icon/logo-blacka.png" alt="Tatee" />
+                                    <a href="index">
+                                        <img src="images/icon/logo-blacka.png" alt="Lasvegas" />
                                     </a>
                                     <strong style="color: #000000; font-size: large;">LasVegas Concord Service </strong>
                                 </div>
@@ -59,30 +59,30 @@
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="home-main.html">Home</a>
+                                                <a href="home">Home</a>
 
                                             </li>
                                             <li class="menu-item">
-                                                <a href="about-us.html">about</a>
+                                                <a href="about-us">about</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="project-detail-2.html">Project</a>
+                                                <a href="imperial-estate">Project</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item">
-                                                        <a href="project-detail-2.html">Imperial Estate</a>
+                                                        <a href="imperial-estate">Imperial Estate</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-3.html">Queens Hostel</a>
+                                                        <a href="queenshostel">Queens Hostel</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-4.html">3D Designs</a>
+                                                        <a href="3D-designs">3D Designs</a>
                                                     </li>
                                                 </ul>
                                             </li>
 
 
                                             <li class="menu-item">
-                                                <a href="contact.html">contact</a>
+                                                <a href="contact">contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -126,7 +126,7 @@
                     <div class="container-fluid">
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
-                                <img src="images/icon/logo-black.png" alt="Tatee" />
+                                <img src="images/icon/logo-black.png" alt="Lasvegas" />
                             </a>
                             <button class="hamburger hamburger--slider float-right" type="button">
                                 <span class="hamburger-box">
@@ -140,11 +140,11 @@
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
                             <li class="menu-item menu-item-has-children">
-                                <a href="home-main.html">Home</a>
+                                <a href="home">Home</a>
 
                             </li>
                             <li class="menu-item">
-                                <a href="about-us.html">about</a>
+                                <a href="about-us">about</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="project-carousel.html">Project</a>
@@ -152,7 +152,7 @@
                             </li>
 
                             <li class="menu-item">
-                                <a href="contact.html">contact</a>
+                                <a href="contact">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -232,7 +232,7 @@
                                     <nav class="navigation project-navigation-2">
                                         <div class="nav-links">
                                             <div class="nav-previous">
-                                                <a href="project-detail-3.html">
+                                                <a href="queenshostel">
                                                     <span class="ti-arrow-left"></span>
                                                 </a>
                                             </div>
@@ -242,7 +242,7 @@
                                                 </a>
                                             </div>
                                             <div class="nav-next">
-                                                <a href="project-detail-2.html">
+                                                <a href="imperial-estate">
                                                     <span class="ti-arrow-right"></span>
                                                 </a>
                                             </div>
@@ -266,7 +266,7 @@
                         <div class="footer-col">
                             <div class="widget m-b-25">
                                 <a href="#">
-                                    <img src="images/icon/logo-white.png" alt="Tatee" />
+                                    <img src="images/icon/logo-white.png" alt="Lasvegas" />
                                 </a>
                             </div>
                             <div class="widget widget-address">
@@ -284,13 +284,13 @@
                                 <h4 class="widget-title">Link</h4>
                                 <ul>
                                     <li>
-                                        <a href="about-us.html">About us</a>
+                                        <a href="about-us">About us</a>
                                     </li>
                                     <li>
-                                        <a href="project-detail-2.html">Services</a>
+                                        <a href="imperial-estate">Services</a>
                                     </li>
                                     <li>
-                                        <a href="contact.html">Contact</a>
+                                        <a href="contact">Contact</a>
                                     </li>
                                 </ul>
                             </div>
