--- a/about-us.html
+++ b/about-us.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Tatee Theme Templates">
+    <meta name="description" content="Lasvegas concord">
     <meta name="author" content="AuCreative">
-    <meta name="keywords" content="Tatee Theme Templates">
+    <meta name="keywords" content="Lasvegas concord">
 
     <!-- Title Page-->
     <title>About LasVegas Concord Service</title>
@@ -50,7 +50,7 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
+                                    <a href="index">
                                         <img src="images/icon/logo-blacka.png" alt="LAsvegasconcordservice" />
                                     </a>
                                     <strong style="color: #000000; font-size: large;">LasVegas Concord Service </strong>
@@ -59,30 +59,30 @@
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="home-main.html">Home</a>
+                                                <a href="home">Home</a>
 
                                             </li>
                                             <li class="menu-item">
-                                                <a href="about-us.html">about</a>
+                                                <a href="about-us">about</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="project-detail-2.html">Project</a>
+                                                <a href="imperial-estate">Project</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item">
-                                                        <a href="project-detail-2.html">Imperial Estate</a>
+                                                        <a href="imperial-estate">Imperial Estate</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-3.html">Queens Hostel</a>
+                                                        <a href="queenshostel">Queens Hostel</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-4.html">3D Designs</a>
+                                                        <a href="3D-designs">3D Designs</a>
                                                     </li>
                                                 </ul>
                                             </li>
 
 
                                             <li class="menu-item">
-                                                <a href="contact.html">contact</a>
+                                                <a href="contact">contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -126,7 +126,7 @@
                     <div class="container-fluid">
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
-                                <img src="images/icon/logo-black.png" alt="Tatee" />
+                                <img src="images/icon/logo-black.png" alt="Lasvegas" />
                             </a>
                             <button class="hamburger hamburger--slider float-right" type="button">
                                 <span class="hamburger-box">
@@ -140,11 +140,11 @@
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
                             <li class="menu-item menu-item-has-children">
-                                <a href="home-main.html">Home</a>
+                                <a href="home">Home</a>
 
                             </li>
                             <li class="menu-item">
-                                <a href="about-us.html">about</a>
+                                <a href="about-us">about</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="project-carousel.html">Project</a>
@@ -152,7 +152,7 @@
                             </li>
 
                             <li class="menu-item">
-                                <a href="contact.html">contact</a>
+                                <a href="contact">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -207,11 +207,48 @@
                                 and build, development appraisal and monitoring among others. Our competitive edge includes our domain expertise, track record, excellent management, innovation and strong corporate values. In all our business offerings,
                                 the ultimate goal is to deliver superior value to our chosen markets.
                             </p>
+                            <div class="col-lg-12">
+                                <div class="row no-gutters">
+                                    <div class="col-md-4">
+                                        <div class="media-statistic-2">
+                                            <div class="media__body">
+                                                <span class="media__number js-counterup">10</span>
+                                                <h5 class="media__title title-sub">Years of experience</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="media-statistic-2">
+                                            <div class="media__body">
+                                                <span class="media__number js-counterup">50</span>
+                                                <h5 class="media__title title-sub">Happy clients</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="media-statistic-2">
+                                            <div class="media__body">
+                                                <span class="media__number js-counterup">14</span>
+                                                <h5 class="media__title title-sub">completed projects</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="col-md-6">
+                                        <div class="media-statistic-2">
+                                            <div class="media__body">
+                                                <span class="media__number js-counterup">16</span>
+                                                <h5 class="media__title title-sub">design arwards</h5>
+                                            </div>
+                                        </div>
+                                    </div> -->
+                                </div>
+                            </div>
                             <p class="text--s18-40">
                                 <strong class="text--c2">Our Vision</strong> Our interests cut across residential and commercial properties. We also provide real-estate advisory services; delivering high level solutions in areas of development conception,
                                 design and build, development appraisal and monitoring among others. Our competitive edge includes our domain expertise, track record, excellent management, innovation and strong corporate values. In all our business offerings,
                                 the ultimate goal is to deliver superior value to our chosen markets.
                             </p>
+
                             <br>
                             <p class="text--s18-40">
                                 <strong class="text--c2">Our Mission</strong> is to help our customers especially residents in Kwara state across different class, experience superior satisfaction through our quality products and services and actualize
@@ -219,11 +256,9 @@
 
 
                             </p>
-                        </div>
-                        <!-- The counters -->
 
 
-                        <!-- <div class="col-lg-8">
+                            <!-- <div class="col-lg-8">
                             <div class="row no-gutters">
                                 <div class="col-md-6">
                                     <div class="media-statistic-2">
@@ -260,8 +295,8 @@
                             </div>
                         </div> -->
 
+                        </div>
                     </div>
-                </div>
             </section>
             <!-- END ABOUT US-->
 
@@ -539,7 +574,7 @@
                                 </figure>
                                 <div class="media__body">
                                     <h4 class="title--sm">
-                                        <a href="#">Ogbebor Nethal Oluwaseyi</a>
+                                        <a href="#">Ogbebor Nehital Oluwaseyi</a>
                                     </h4>
                                     <span class="title-sub--sm">Project Supervisor</span>
                                 </div>
@@ -669,12 +704,12 @@
                         <div class="footer-col">
                             <div class="widget m-b-25">
                                 <a href="#">
-                                    <img src="images/icon/logo-white.png" alt="Tatee" />
+                                    <img src="images/icon/logo-white.png" alt="Lasvegas" />
                                 </a>
                             </div>
                             <div class="widget widget-address">
                                 <ul>
-                                    <li>Address : 910/4 Irewolede Shopping Complex, Ilorin. Kwara State</li>
+                                    <li>Address : 10/4 Irewolede Shopping Complex, Ilorin. Kwara State</li>
                                     <li>Phone number : + (234) 8033 055 802 | (234) 8035 903514</li>
                                     <li>Email : info@lasvegasconcordservices.com</li>
                                 </ul>
@@ -687,14 +722,30 @@
                                 <h4 class="widget-title">Link</h4>
                                 <ul>
                                     <li>
-                                        <a href="about-us.html">About us</a>
+                                        <a href="about-us">About us</a>
                                     </li>
                                     <li>
-                                        <a href="project-detail-2.html">Services</a>
+                                        <a href="imperial-estate">Services</a>
                                     </li>
                                     <li>
-                                        <a href="contact.html">Contact</a>
+                                        <a href="contact">Contact</a>
                                     </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-col p-l-70 p-md-l-0">
+                            <div class="widget widget_pages">
+                                <h4 class="widget-title">Recent Projects</h4>
+                                <ul>
+                                    <li>
+                                        <a href="imperial-estate">Imperial Estate</a>
+                                    </li>
+                                    <li>
+                                        <a href="queens-hostel">QueensHostel</a>
+                                    </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -745,38 +796,38 @@
             </div>
         </footer>
         <!-- END FOOTER-->
-    </div>
+        </div>
 
-    <!-- Jquery JS-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <!-- Bootstrap JS-->
-    <script src="vendor/bootstrap-4.1/bootstrap.min.js"></script>
-    <!-- Vendor JS-->
-    <script src="vendor/animsition/animsition.min.js"></script>
-    <script src="vendor/slick/slick.min.js"></script>
-    <script src="vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="vendor/wow/wow.min.js"></script>
-    <script src="vendor/jquery.counterup/jquery.counterup.min.js"></script>
-    <script src="vendor/isotope/isotope.pkgd.min.js"></script>
-    <script src="vendor/isotope/imagesloaded.pkgd.min.js"></script>
-    <script src="vendor/matchHeight/jquery.matchHeight-min.js"></script>
-    <script src="vendor/select2/select2.min.js"></script>
-    <script src="vendor/sweetalert/sweetalert.min.js"></script>
-    <script src="vendor/noUiSlider/nouislider.min.js"></script>
+        <!-- Jquery JS-->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <!-- Bootstrap JS-->
+        <script src="vendor/bootstrap-4.1/bootstrap.min.js"></script>
+        <!-- Vendor JS-->
+        <script src="vendor/animsition/animsition.min.js"></script>
+        <script src="vendor/slick/slick.min.js"></script>
+        <script src="vendor/waypoints/jquery.waypoints.min.js"></script>
+        <script src="vendor/wow/wow.min.js"></script>
+        <script src="vendor/jquery.counterup/jquery.counterup.min.js"></script>
+        <script src="vendor/isotope/isotope.pkgd.min.js"></script>
+        <script src="vendor/isotope/imagesloaded.pkgd.min.js"></script>
+        <script src="vendor/matchHeight/jquery.matchHeight-min.js"></script>
+        <script src="vendor/select2/select2.min.js"></script>
+        <script src="vendor/sweetalert/sweetalert.min.js"></script>
+        <script src="vendor/noUiSlider/nouislider.min.js"></script>
 
-    <!-- Main JS-->
-    <script src="js/global.js"></script>
-    <script type="text/javascript">
-        function add_chatinline() {
-            var hccid = 97819133;
-            var nt = document.createElement("script");
-            nt.async = true;
-            nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid;
-            var ct = document.getElementsByTagName("script")[0];
-            ct.parentNode.insertBefore(nt, ct);
-        }
-        add_chatinline();
-    </script>
+        <!-- Main JS-->
+        <script src="js/global.js"></script>
+        <script type="text/javascript">
+            function add_chatinline() {
+                var hccid = 97819133;
+                var nt = document.createElement("script");
+                nt.async = true;
+                nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid;
+                var ct = document.getElementsByTagName("script")[0];
+                ct.parentNode.insertBefore(nt, ct);
+            }
+            add_chatinline();
+        </script>
 
 </body>
 
