--- a/coming-soon.html
+++ b/coming-soon.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Tatee Theme Templates">
+    <meta name="description" content="Lasvegas concord">
     <meta name="author" content="AuCreative">
-    <meta name="keywords" content="Tatee Theme Templates">
+    <meta name="keywords" content="Lasvegas concord">
 
     <!-- Title Page-->
     <title>Coming Soon</title>
@@ -50,18 +50,18 @@
                         <div class="container-fluid">
                             <div class="header__content">
                                 <div class="logo">
-                                    <a href="#">
-                                        <img src="images/icon/logo-white.png" alt="Tatee" />
+                                    <a href="index">
+                                        <img src="images/icon/logo-white.png" alt="Lasvegas" />
                                     </a>
                                 </div>
                                 <div class="header__content-right">
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="home-main.html">Home</a>
+                                                <a href="home">Home</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item">
-                                                        <a href="home-main.html">Main home</a>
+                                                        <a href="home">Main home</a>
                                                     </li>
                                                     <li class="menu-item">
                                                         <a href="home-project-hover.html">Project Hover</a>
@@ -99,7 +99,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="about-us.html">about</a>
+                                                <a href="about-us">about</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children">
                                                 <a href="project-grid-full.html">Project</a>
@@ -123,13 +123,13 @@
                                                                 <a href="project-detail-1.html">Project detail v1</a>
                                                             </li>
                                                             <li class="menu-item">
-                                                                <a href="project-detail-2.html">Project detail v2</a>
+                                                                <a href="imperial-estate">Project detail v2</a>
                                                             </li>
                                                             <li class="menu-item">
-                                                                <a href="project-detail-3.html">Project detail v3</a>
+                                                                <a href="queenshostel">Project detail v3</a>
                                                             </li>
                                                             <li class="menu-item">
-                                                                <a href="project-detail-4.html">Project detail v4</a>
+                                                                <a href="3D-designs">Project detail v4</a>
                                                             </li>
                                                         </ul>
                                                     </li>
@@ -187,7 +187,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="contact.html">contact</a>
+                                                <a href="contact">contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -231,7 +231,7 @@
                     <div class="container-fluid">
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
-                                <img src="images/icon/logo-black.png" alt="Tatee" />
+                                <img src="images/icon/logo-black.png" alt="Lasvegas" />
                             </a>
                             <button class="hamburger hamburger--slider float-right" type="button">
                                 <span class="hamburger-box">
@@ -245,10 +245,10 @@
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
                             <li class="menu-item menu-item-has-children">
-                                <a href="home-main.html">Home</a>
+                                <a href="home">Home</a>
                                 <ul class="sub-menu">
                                     <li class="menu-item">
-                                        <a href="home-main.html">Main home</a>
+                                        <a href="home">Main home</a>
                                     </li>
                                     <li class="menu-item">
                                         <a href="home-project-hover.html">Project Hover</a>
@@ -286,7 +286,7 @@
                                 </ul>
                             </li>
                             <li class="menu-item">
-                                <a href="about-us.html">about</a>
+                                <a href="about-us">about</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="project-grid-full.html">Project</a>
@@ -310,13 +310,13 @@
                                                 <a href="project-detail-1.html">Project detail v1</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="project-detail-2.html">Project detail v2</a>
+                                                <a href="imperial-estate">Project detail v2</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="project-detail-3.html">Project detail v3</a>
+                                                <a href="queenshostel">Project detail v3</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="project-detail-4.html">Project detail v4</a>
+                                                <a href="3D-designs">Project detail v4</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -374,7 +374,7 @@
                                 </ul>
                             </li>
                             <li class="menu-item">
-                                <a href="contact.html">contact</a>
+                                <a href="contact">contact</a>
                             </li>
                         </ul>
                     </div>
