--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Tatee Theme Templates">
+    <meta name="description" content="Lasvegas concord">
     <meta name="author" content="AuCreative">
-    <meta name="keywords" content="Tatee Theme Templates">
+    <meta name="keywords" content="Lasvegas concord">
 
     <!-- Title Page-->
     <title>Contact | LasVegas</title>
@@ -51,7 +51,7 @@
                             <div class="header__content">
                                 <div class="logo">
                                     <a href="#">
-                                        <img src="images/icon/logo-blacka.png" alt="Tatee" />
+                                        <img src="images/icon/logo-blacka.png" alt="Lasvegas" />
                                     </a>
                                     <strong style="color: #000000; font-size: large;">LasVegas Concord Service </strong>
                                 </div>
@@ -59,30 +59,30 @@
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="home-main.html">Home</a>
+                                                <a href="home">Home</a>
 
                                             </li>
                                             <li class="menu-item">
-                                                <a href="about-us.html">about</a>
+                                                <a href="about-us">about</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="project-detail-2.html">Project</a>
+                                                <a href="imperial-estate">Project</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item">
-                                                        <a href="project-detail-2.html">Imperial Estate</a>
+                                                        <a href="imperial-estate">Imperial Estate</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-3.html">Queens Hostel</a>
+                                                        <a href="queenshostel">Queens Hostel</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-4.html">3D Designs</a>
+                                                        <a href="3D-designs">3D Designs</a>
                                                     </li>
                                                 </ul>
                                             </li>
 
 
                                             <li class="menu-item">
-                                                <a href="contact.html">contact</a>
+                                                <a href="contact">contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -126,7 +126,7 @@
                     <div class="container-fluid">
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
-                                <img src="images/icon/logo-black.png" alt="Tatee" />
+                                <img src="images/icon/logo-black.png" alt="Lasvegas" />
                             </a>
                             <button class="hamburger hamburger--slider float-right" type="button">
                                 <span class="hamburger-box">
@@ -140,11 +140,11 @@
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
                             <li class="menu-item menu-item-has-children">
-                                <a href="home-main.html">Home</a>
+                                <a href="home">Home</a>
 
                             </li>
                             <li class="menu-item">
-                                <a href="about-us.html">about</a>
+                                <a href="about-us">about</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="project-carousel.html">Project</a>
@@ -152,7 +152,7 @@
                             </li>
 
                             <li class="menu-item">
-                                <a href="contact.html">contact</a>
+                                <a href="contact">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -189,8 +189,9 @@
             <!-- CONTACT-->
             <section class="section p-b-80">
                 <div class="container">
-                    <div class="map-wrapper js-google-map m-b-60" data-makericon="images/icon/marker.png" data-makers="[[&quot;TATEE&quot;, &quot;Now that you visited our website,&lt;br&gt; how about checking out our office too?&quot;, 8.4597457, 4.5513709]]">
-                        <div class="map__holder js-map-holder" id="map" style="height: 370px;"></div>
+                    <div class="map-wrapper js-google-map m-b-60" data-makericon="images/icon/marker.png" data-makers="[[&quot;Lasvegas&quot;, &quot;Now that you visited our website,&lt;br&gt; how about checking out our office too?&quot;, 8.4597457, 4.5513709]]">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15785.62329835592!2d4.5530343888495235!3d8.45985705696819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103653e5281257bd%3A0x7d5012d84a1b934c!2sLasvegas%20concord%20service!5e0!3m2!1sen!2sng!4v1597446863552!5m2!1sen!2sng"
+                            width="1150" height="370" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                     <div class="row no-gutters">
                         <div class="col-lg-4">
@@ -244,7 +245,7 @@
                         <div class="footer-col">
                             <div class="widget m-b-25">
                                 <a href="#">
-                                    <img src="images/icon/logo-white.png" alt="Tatee" />
+                                    <img src="images/icon/logo-white.png" alt="Lasvegas" />
                                 </a>
                             </div>
                             <div class="widget widget-address">
@@ -262,14 +263,30 @@
                                 <h4 class="widget-title">Link</h4>
                                 <ul>
                                     <li>
-                                        <a href="about-us.html">About us</a>
+                                        <a href="about-us">About us</a>
                                     </li>
                                     <li>
-                                        <a href="project-detail-2.html">Services</a>
+                                        <a href="imperial-estate">Services</a>
                                     </li>
                                     <li>
-                                        <a href="contact.html">Contact</a>
+                                        <a href="contact">Contact</a>
                                     </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-col p-l-70 p-md-l-0">
+                            <div class="widget widget_pages">
+                                <h4 class="widget-title">Recent Projects</h4>
+                                <ul>
+                                    <li>
+                                        <a href="imperial-estate">Imperial Estate</a>
+                                    </li>
+                                    <li>
+                                        <a href="queens-hostel">QueensHostel</a>
+                                    </li>
+
                                 </ul>
                             </div>
                         </div>
