--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Tatee Theme Templates">
+    <meta name="description" content="Lasvegas concord">
     <meta name="author" content="AuCreative">
-    <meta name="keywords" content="Tatee Theme Templates">
+    <meta name="keywords" content="Lasvegas concord">
 
     <!-- Title Page-->
     <title>LasVegas Concord Service</title>
@@ -54,7 +54,7 @@
                             <div class="header__content">
                                 <div class="logo">
                                     <a href="#">
-                                        <img src="images/icon/logo-blacka.png" alt="Tatee" />
+                                        <img src="images/icon/logo-blacka.png" alt="Lasvegas" />
                                     </a>
                                     <strong style="color: #000000; font-size: large;">LasVegas Concord Service </strong>
                                 </div>
@@ -62,30 +62,30 @@
                                     <nav class="header-nav-menu">
                                         <ul class="menu nav-menu">
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="home-main.html">Home</a>
+                                                <a href="home">Home</a>
 
                                             </li>
                                             <li class="menu-item">
-                                                <a href="about-us.html">about</a>
+                                                <a href="about-us">about</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children">
-                                                <a href="project-detail-2.html">Project</a>
+                                                <a href="imperial-estate">Project</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item">
-                                                        <a href="project-detail-2.html">Imperial Estate</a>
+                                                        <a href="imperial-estate">Imperial Estate</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-3.html">Queens Hostel</a>
+                                                        <a href="queenshostel">Queens Hostel</a>
                                                     </li>
                                                     <li class="menu-item">
-                                                        <a href="project-detail-4.html">3D Designs</a>
+                                                        <a href="3D-designs">3D Designs</a>
                                                     </li>
                                                 </ul>
                                             </li>
 
 
                                             <li class="menu-item">
-                                                <a href="contact.html">contact</a>
+                                                <a href="contact">contact</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -129,7 +129,7 @@
                     <div class="container-fluid">
                         <div class="header-mobile__bar-inner">
                             <a class="logo" href="index.html">
-                                <img src="images/icon/logo-black.png" alt="Tatee" />
+                                <img src="images/icon/logo-black.png" alt="Lasvegas" />
                             </a>
                             <button class="hamburger hamburger--slider float-right" type="button">
                                 <span class="hamburger-box">
@@ -143,11 +143,11 @@
                     <div class="container-fluid">
                         <ul class="menu nav-menu menu-mobile">
                             <li class="menu-item menu-item-has-children">
-                                <a href="home-main.html">Home</a>
+                                <a href="home">Home</a>
 
                             </li>
                             <li class="menu-item">
-                                <a href="about-us.html">about</a>
+                                <a href="about-us">about</a>
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="project-carousel.html">Project</a>
@@ -155,7 +155,7 @@
                             </li>
 
                             <li class="menu-item">
-                                <a href="contact.html">contact</a>
+                                <a href="contact">contact</a>
                             </li>
                         </ul>
                     </div>
@@ -191,7 +191,7 @@
                                 <h2 class="tp-caption tp-resizeme rev-text-2" data-frames="[{&quot;delay&quot;:800,&quot;speed&quot;:2100,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                     data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-35, -30, 15, 10, 10]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[600,600,500,576,500]" data-height="[&quot;auto&quot;]"
                                     data-lineheight="[60, 60, 45, 50, 45]" data-whitespace="normal" data-color="#fff" data-fontweight="700" data-fontsize="[48, 48, 46, 42, 46]" data-textalign="[left, left, left, left, left]">Imperial Estate</h2>
-                                <a class="tp-caption tp-resizeme" href="project-detail-2.html" target="_self" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1800,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
+                                <a class="tp-caption tp-resizeme" href="imperial-estate" target="_self" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1800,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                     data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 15]" data-voffset="[87, 87, 130, 130, 130]" data-width="['auto']" data-height="[&quot;auto&quot;]" data-responsive_offset="on" data-responsive="off" data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]">
                                     <span class="rev-btn-1">See project
                                         <span class="arrow" data-paddingleft="5">
@@ -208,7 +208,7 @@
                                 <h2 class="tp-caption tp-resizeme rev-text-2" data-frames="[{&quot;delay&quot;:800,&quot;speed&quot;:2100,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                     data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-35, -30, 15, 10, 10]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[600,600,500,576,500]" data-height="[&quot;auto&quot;]"
                                     data-lineheight="[60, 60, 45, 50, 45]" data-whitespace="normal" data-color="#fff" data-fontweight="700" data-fontsize="[48, 48, 46, 42, 46]" data-textalign="[left, left, left, left, left]">Queens Hostel</h2>
-                                <a class="tp-caption tp-resizeme" href="project-detail-3.html" target="_self" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1800,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
+                                <a class="tp-caption tp-resizeme" href="queenshostel" target="_self" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1800,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                     data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 15]" data-voffset="[87, 87, 130, 130, 130]" data-width="['auto']" data-height="[&quot;auto&quot;]" data-responsive_offset="on" data-responsive="off" data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]">
                                     <span class="rev-btn-1">See project
                                         <span class="arrow" data-paddingleft="5">
@@ -225,7 +225,7 @@
                                 <h2 class="tp-caption tp-resizeme rev-text-2" data-frames="[{&quot;delay&quot;:800,&quot;speed&quot;:2100,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                     data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-35, -30, 15, 10, 10]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[600,600,500,576,500]" data-height="[&quot;auto&quot;]"
                                     data-lineheight="[60, 60, 45, 50, 45]" data-whitespace="normal" data-color="#fff" data-fontweight="700" data-fontsize="[48, 48, 46, 42, 46]" data-textalign="[left, left, left, left, left]">3D Design</h2>
-                                <a class="tp-caption tp-resizeme" href="project-detail-4.html" target="_self" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1800,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
+                                <a class="tp-caption tp-resizeme" href="3D-designs" target="_self" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1800,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                     data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 15]" data-voffset="[87, 87, 130, 130, 130]" data-width="['auto']" data-height="[&quot;auto&quot;]" data-responsive_offset="on" data-responsive="off" data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]">
 
                                     <span class="rev-btn-1">See project
@@ -319,7 +319,7 @@
                                         <span class="line line--bottom"></span>
                                         <div class="media__body">
                                             <h3 class="title">
-                                                <a href="project-detail-2.html">Well tarred concrete Roads</a>
+                                                <a href="imperial-estate">Well tarred concrete Roads</a>
                                             </h3>
 
                                         </div>
@@ -335,7 +335,7 @@
                                         <span class="line line--bottom"></span>
                                         <div class="media__body">
                                             <h3 class="title">
-                                                <a href="project-detail-4.html">3D Designs</a>
+                                                <a href="3D-designs">3D Designs</a>
                                             </h3>
 
                                         </div>
@@ -351,7 +351,7 @@
                                         <span class="line line--bottom"></span>
                                         <div class="media__body">
                                             <h3 class="title">
-                                                <a href="project-detail-2.html">Imperial Estate</a>
+                                                <a href="imperial-estate">Imperial Estate</a>
                                             </h3>
 
                                         </div>
@@ -367,7 +367,7 @@
                                         <span class="line line--bottom"></span>
                                         <div class="media__body">
                                             <h3 class="title">
-                                                <a href="project-detail-3.html">Queens Hostel</a>
+                                                <a href="queenshostel">Queens Hostel</a>
                                             </h3>
 
                                         </div>
@@ -544,7 +544,7 @@
                                     <p class="media__text">
                                         Our interests cut across residential and commercial properties. We also provide real-estate advisory services; delivering high level solutions in areas of development conception, design and build, development appraisal and monitoring among others.
                                     </p>
-                                    <a class="au-btn au-btn--arrow" href="about-us.html">Read more
+                                    <a class="au-btn au-btn--arrow" href="about-us">Read more
                                         <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                     </a>
                                 </div>
@@ -632,12 +632,12 @@
                         <div class="footer-col">
                             <div class="widget m-b-25">
                                 <a href="#">
-                                    <img src="images/icon/logo-white.png" alt="Tatee" />
+                                    <img src="images/icon/logo-white.png" alt="Lasvegas" />
                                 </a>
                             </div>
                             <div class="widget widget-address">
                                 <ul>
-                                    <li>Address : 910/4 Irewolede Shopping Complex, Ilorin. Kwara State</li>
+                                    <li>Address : 10/4 Irewolede Shopping Complex, Ilorin. Kwara State</li>
                                     <li>Phone number : + (234) 8033 055 802 | (234) 8035 903514</li>
                                     <li>Email : info@lasvegasconcordservices.com</li>
                                 </ul>
@@ -650,14 +650,30 @@
                                 <h4 class="widget-title">Link</h4>
                                 <ul>
                                     <li>
-                                        <a href="about-us.html">About us</a>
+                                        <a href="about-us">About us</a>
                                     </li>
                                     <li>
-                                        <a href="project-detail-2.html">Services</a>
+                                        <a href="imperial-estate">Services</a>
                                     </li>
                                     <li>
-                                        <a href="contact.html">Contact</a>
+                                        <a href="contact">Contact</a>
                                     </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-col p-l-70 p-md-l-0">
+                            <div class="widget widget_pages">
+                                <h4 class="widget-title">Recent Projects</h4>
+                                <ul>
+                                    <li>
+                                        <a href="imperial-estate">Imperial Estate</a>
+                                    </li>
+                                    <li>
+                                        <a href="queens-hostel">QueensHostel</a>
+                                    </li>
+
                                 </ul>
                             </div>
                         </div>
